<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MiCompra.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.MiCompra.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <!--<com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/hello_first_fragment"
        app:backgroundTint="#8DEDA3"
        app:srcCompat="@drawable/ic_baseline_add_24" />-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="HardcodeText">
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/add_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginBottom="26dp"
            android:text="@string/cerrar"
            app:backgroundTint="@color/verde_button"
            app:icon="@drawable/ic_baseline_add_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_market_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:src="@drawable/ic_baseline_add_business_24"
            app:backgroundTint="@color/verde_button"
            app:fabSize="normal"
            android:tint="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/add_fab"
            app:layout_constraintEnd_toEndOf="@+id/add_fab"
            android:contentDescription="@string/add_market" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_item_fab"
            android:layout_marginBottom="24dp"
            android:src="@drawable/ic_baseline_add_shopping_cart_24"
            app:backgroundTint="@color/verde_button"
            app:fabSize="normal"
            app:layout_constraintBottom_toTopOf="@id/add_market_fab"
            app:layout_constraintEnd_toEndOf="@id/add_market_fab"
            app:layout_constraintStart_toStartOf="@id/add_market_fab"
            android:contentDescription="@string/add_item" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_price_fab"
            android:layout_marginBottom="24dp"
            android:src="@drawable/price_change"
            app:backgroundTint="@color/verde_button"
            app:fabSize="normal"
            app:layout_constraintBottom_toTopOf="@id/add_item_fab"
            app:layout_constraintEnd_toEndOf="@id/add_item_fab"
            app:layout_constraintStart_toStartOf="@id/add_item_fab"
            android:contentDescription="@string/add_price" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/verde_fondo"
            android:paddingTop="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <!--https://stackoverflow.com/questions/1957831/center-a-button-in-a-linear-layout -->

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_items"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    android:paddingTop="10dp" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>